# music-key

./: .gitattributes  .gitignore  App.tsx  CLAUDE.md  PIANO_APP_ROADMAP.md  RELEASE.md  TASK.md  babel.config.js  index.js  jest.config.js  jest.setup.js  package-lock.json  package.json
android/: keystore.properties.template  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  AudioEngineJni.cpp  NativeAudioEngine.cpp  NativeAudioEngine.h  PcmRecorder.cpp  PcmRecorder.h  SynthEngine.cpp  SynthEngine.h
android/app/src/main/java/com/music/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/xml/: file_paths.xml
ios/: Podfile
ios/music/: AppDelegate.swift  Info.plist
ios/music.xcodeproj/: project.pbxproj
src/audio/: audio.ts  performer.ts  recordingPlayer.ts  songPlayer.ts  soundRecorder.ts
src/components/: SplashCover.tsx
src/components/ads/: AdBanner.tsx
src/components/controls/: Slider.tsx  SliderValueLabel.tsx
src/components/instruments/: InstrumentSelector.tsx
src/components/keyboard/: Keyboard.tsx  MiniKeyboard.tsx  ZoomControls.tsx
src/components/recordings/: RecordingsModal.tsx
src/components/settings/: SettingsModal.tsx
src/components/songs/: NotationToggle.tsx  SongControl.tsx
src/components/transport/: RecordKeysControls.tsx  SoundRecordButton.tsx
src/domain/: instruments.ts  midi.ts  notes.ts  recording.ts  song.ts  songs.ts
src/screens/: PlayerScreen.tsx
src/services/: songImport.ts  storage.ts
src/specs/: NativeAudioEngine.ts
src/store/: instrumentStore.ts  keyboardScroll.ts  keyboardStore.ts  liveNotesStore.ts  playbackStore.ts  recordingStore.ts  settingsStore.ts  soundRecorderStore.ts  useHydrated.ts  userSongsStore.ts
src/theme/: colors.ts  responsive.ts
(+4 files in other folders)
